git-svn-id: http://svn.vdombox.ru/flextools/trunk@6684 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/Events.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/Events.mxml
@@ -53,6 +53,9 @@
 				return true;
 			}
 
+			/**
+			 * Called by the Core (VdomIDE) after initializing this module.
+			 */
 			override public function startup() : void
 			{
 				facade = ApplicationFacade.getInstance( MODULE_ID );
@@ -69,6 +72,9 @@
 				facade.sendNotification( ApplicationFacade.CREATE_SETTINGS_SCREEN );
 			}
 
+			/**
+			 * Called by the Core (VdomIDE) after select this module.
+			 */
 			override public function getBody() : void
 			{
 				facade.sendNotification( ApplicationFacade.CREATE_BODY );
