Selecting a TreeElement in the load module .
git-svn-id: http://svn.vdombox.ru/flextools/trunk@6698 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/TreeElement.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/TreeElement.mxml
@@ -5,7 +5,9 @@
 					  xmlns:s="library://ns.adobe.com/flex/spark"
 					  width="200" x="@{ _treeElementVO.left }" y="@{ _treeElementVO.top }"
 					  skinClass="net.vdombox.ide.modules.tree.view.skins.TreeElementSkin"
-					  creationComplete="creationCompleteHandler()" remove="removeHandler()">
+					  creationComplete="creationCompleteHandler()" 
+					  remove="removeHandler()"				 
+					  >
 
 	<fx:Script>
 		<![CDATA[
@@ -148,8 +150,17 @@
 				{
 					_treeElementVO.width = width;
 					_treeElementVO.height = height;
+				}					
+			}
+			
+			// todo Bad decision. Remake.
+			private function show():void
+			{
+				if ( selected )
+				{
+					selected = false;
+					selected = true;
 				}
-					
 			}
 			
 			private function creationCompleteHandler() : void
@@ -158,8 +169,9 @@
 
 				BindingUtils.bindSetter( sizeChanged, this, "width" );
 				BindingUtils.bindSetter( sizeChanged, this, "height" );
-				
+								
 				addEventListener( MouseEvent.MOUSE_DOWN, mouseDownHandler );
+				show();
 			}
 
 			private function removeHandler() : void
