add function "deSelect()"
git-svn-id: http://svn.vdombox.ru/flextools/trunk@6717 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/Wysiwyg.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/Wysiwyg.mxml
@@ -71,6 +71,7 @@
 
 			override public function tearDown() : void
 			{
+				trace("\nW Z V G : Wisiwig.tearDown()");
 				dispatchEvent( new Event( TEAR_DOWN ) );
 			}
 
@@ -118,6 +119,7 @@
 
 			override public function getSettingsScreen() : void
 			{
+//				trace(" \n W Z V G : Wisiwig.getSettingsScreen()");
 				facade.sendNotification( ApplicationFacade.CREATE_SETTINGS_SCREEN );
 			}
 
@@ -125,7 +127,11 @@
 			{
 				facade.sendNotification( ApplicationFacade.CREATE_BODY );
 			}
-
+			
+			override public function deSelect():void
+			{
+				facade.sendNotification(ApplicationFacade.MODULE_DESELECTED);
+			}
 			override public function initializeSettings() : void
 			{
 				facade.sendNotification( ApplicationFacade.INITIALIZE_SETTINGS );
