add function "deSelect()"
git-svn-id: http://svn.vdombox.ru/flextools/trunk@6718 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/Tree.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/Tree.mxml
@@ -34,6 +34,7 @@
 
 			override public function tearDown() : void
 			{
+				trace("\nT R E E: Tree.tearDown()");
 				dispatchEvent( new Event( TEAR_DOWN ) );
 			}
 
@@ -86,6 +87,11 @@
 			override public function getBody() : void
 			{
 				facade.sendNotification( ApplicationFacade.CREATE_BODY );
+			}
+			
+			override public function deSelect():void
+			{
+				facade.sendNotification(ApplicationFacade.MODULE_DESELECTED);
 			}
 
 			override public function initializeSettings() : void
