add function "deSelect()"
git-svn-id: http://svn.vdombox.ru/flextools/trunk@6719 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/Scripts.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/Scripts.mxml
@@ -76,6 +76,11 @@
 			{
 				facade.sendNotification( ApplicationFacade.CREATE_BODY );
 			}
+			
+			override public function deSelect():void
+			{
+				facade.sendNotification(ApplicationFacade.MODULE_DESELECTED);
+			}
 
 			override public function initializeSettings() : void
 			{
