--- a/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/ApplicationsManagment.mxml
+++ b/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/ApplicationsManagment.mxml
@@ -75,6 +75,7 @@
 			override public function getBody() : void
 			{
 				facade.sendNotification( ApplicationFacade.CREATE_BODY );
+				facade.sendNotification( ApplicationFacade.MODULE_SELECTED);
 			}
 
 			override public function initializeSettings() : void
