Set value on propertiesPanel when showed module
git-svn-id: http://svn.vdombox.ru/flextools/trunk@6740 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/Tree.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/Tree.mxml
@@ -49,7 +49,7 @@
 
 			override public function get version() : String
 			{
-				return MODULE_NAME;
+				return VERSION;
 			}
 
 			override public function get hasToolset() : Boolean
