delete HelpPanel.mxml delete HelpPanelMediator add toolTip for each Attributes in AttributesPanel
git-svn-id: http://svn.vdombox.ru/flextools/trunk@6747 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeColorItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeColorItemRenderer.mxml
@@ -25,6 +25,9 @@
 			[Bindable]
 			private var displayName : String;
 
+			[Bindable]
+			private var help : String;
+			
 			private var _attributeDescriptionVO : AttributeDescriptionVO;
 
 			private var codeInterfaceRE : RegExp = /^(\w*)\((.*)\)/;
@@ -39,7 +42,8 @@
 				_attributeVO = value.attributeVO;
 				_attributeDescriptionVO = value.attributeDescriptionVO;
 				displayName = _attributeDescriptionVO.displayName;
-
+				help = _attributeDescriptionVO.help;
+				
 				var codeInterface : Object = {}
 				var matches : Array = _attributeDescriptionVO.codeInterface.match( codeInterfaceRE );
 				//
@@ -169,7 +173,7 @@
 							gap="2" paddingRight="2" />
 	</s:layout>
 
-	<s:Group height="100%" width="100%">
+	<s:Group height="100%" width="100%" toolTip="{ help }">
 
 		<s:Rect bottom="0" left="0" right="0" top="0">
 
@@ -196,5 +200,6 @@
 	<attributeRenderers:ColorPicker id="valueField"
 									height="21" minWidth="10" width="90"
 									color="@{ _attributeVO.value }"
-									textAlign="left" />
+									textAlign="left" 
+									toolTip="{ help }"/>
 </s:ItemRenderer>
