--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeExternalEditorItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeExternalEditorItemRenderer.mxml
@@ -20,6 +20,9 @@
 			[Bindable]
 			private var displayName : String;
 			
+			[Bindable]
+			private var help : String;
+			
 			private var _attributeDescriptionVO : AttributeDescriptionVO;
 
 			private var codeInterfaceRE : RegExp = /^(\w*)\((.*)\)/;
@@ -34,6 +37,7 @@
 				_attributeVO = value.attributeVO;
 				_attributeDescriptionVO = value.attributeDescriptionVO;
 				displayName = _attributeDescriptionVO.displayName;
+				help = _attributeDescriptionVO.help;
 
 				var codeInterface : Object = {}
 				var matches : Array = _attributeDescriptionVO.codeInterface.match( codeInterfaceRE );
@@ -102,7 +106,7 @@
 							gap="2" paddingRight="2" />
 	</s:layout>
 
-	<s:Group width="100%" height="100%">
+	<s:Group width="100%" height="100%" toolTip="{ help }">
 		
 		<s:Rect bottom="0" left="0" right="0" top="0">
 			<s:fill>
@@ -121,5 +125,6 @@
 
 	<externalEditor:ExternalEditor id="valueField"
 								   height="21" value="@{ _attributeVO.value }" width="90"
-								   textAlign="left" />
+								   textAlign="left"
+								   toolTip="{ help }" />
 </s:ItemRenderer>
