--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeMultilineItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeMultilineItemRenderer.mxml
@@ -22,6 +22,9 @@
 			[Bindable]
 			private var displayName : String;
 			
+			[Bindable]
+			private var help : String;
+			
 			private var _attributeDescriptionVO : AttributeDescriptionVO;
 
 			private var codeInterfaceRE : RegExp = /^(\w*)\((.*)\)/;
@@ -36,6 +39,7 @@
 				_attributeVO = value.attributeVO;
 				_attributeDescriptionVO = value.attributeDescriptionVO;
 				displayName = _attributeDescriptionVO.displayName;
+				help = _attributeDescriptionVO.help;
 
 				var codeInterface : Object = {}
 				var matches : Array = _attributeDescriptionVO.codeInterface.match( codeInterfaceRE );
@@ -132,7 +136,7 @@
 							gap="2" paddingRight="2" />
 	</s:layout>
 
-	<s:Group width="100%" height="100%">
+	<s:Group width="100%" height="100%" toolTip="{ help }">
 		
 		<s:Rect bottom="0" left="0" right="0" top="0">
 			<s:fill>
@@ -149,7 +153,7 @@
 		
 	</s:Group>
 
-	<attributeRenderers:Multiline id="valueField" value="@{ _attributeVO.value }"
+	<attributeRenderers:Multiline id="valueField" value="@{ _attributeVO.value }" toolTip="{ help }"
 						 height="21" width="90"
 						 textAlign="left" />
 </s:ItemRenderer>
