--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeNumberItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeNumberItemRenderer.mxml
@@ -19,6 +19,9 @@
 			[Bindable]
 			private var displayName : String;
 			
+			[Bindable]
+			private var help : String;
+			
 			private var _attributeDescriptionVO : AttributeDescriptionVO;
 			
 			private var codeInterfaceRE : RegExp = /^(\w*)\((.*)\)/;
@@ -33,7 +36,8 @@
 				_attributeVO = value.attributeVO;
 				_attributeDescriptionVO = value.attributeDescriptionVO;
 				displayName = _attributeDescriptionVO.displayName;
-				
+				help = _attributeDescriptionVO.help;
+
 				var codeInterface : Object = {}
 				var matches : Array = _attributeDescriptionVO.codeInterface.match( codeInterfaceRE );
 				
@@ -129,7 +133,7 @@
 							gap="2" paddingRight="2" />
 	</s:layout>
 	
-	<s:Group width="100%" height="100%">
+	<s:Group width="100%" height="100%" toolTip="{ help }">
 		
 		<s:Rect bottom="0" left="0" right="0" top="0">
 			<s:fill>
@@ -148,6 +152,7 @@
 	
 	<s:TextInput id="valueField"
 				 height="21" minWidth="0" text="@{_attributeVO.value}" width="90"
-				 textAlign="left" />
+				 textAlign="left"
+				 toolTip="{ help }"/>
 	
 </s:ItemRenderer>
