--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributePagelinkItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributePagelinkItemRenderer.mxml
@@ -25,6 +25,9 @@
 			[Bindable]
 			private var displayName : String;
 			
+			[Bindable]
+			private var help : String;
+			
 			private var _attributeDescriptionVO : AttributeDescriptionVO;
 
 			private var codeInterfaceRE : RegExp = /^(\w*)\((.*)\)/;
@@ -39,6 +42,7 @@
 				_attributeVO = value.attributeVO;
 				_attributeDescriptionVO = value.attributeDescriptionVO;
 				displayName = _attributeDescriptionVO.displayName;
+				help = _attributeDescriptionVO.help;
 
 				var codeInterface : Object = {}
 				var matches : Array = _attributeDescriptionVO.codeInterface.match( codeInterfaceRE );
@@ -136,7 +140,7 @@
 							gap="2" paddingRight="2" />
 	</s:layout>
 
-	<s:Group width="100%" height="100%">
+	<s:Group width="100%" height="100%" toolTip="{ help }">
 		
 		<s:Rect bottom="0" left="0" right="0" top="0">
 			<s:fill>
@@ -156,5 +160,6 @@
 	<mx:ComboBox id="valueField"
 				 height="21" labelField="name" minWidth="10" width="90"
 				 textAlign="left"
-				 change="valueField_changeHandler( event )" />
+				 change="valueField_changeHandler( event )"
+				 toolTip="{ help }"/>
 </s:ItemRenderer>
