Selected current page in ObetctsTreePanel
git-svn-id: http://svn.vdombox.ru/flextools/trunk@6749 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/panels/ObjectsTreePanel.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/panels/ObjectsTreePanel.mxml
@@ -6,6 +6,7 @@
 
 	<fx:Script>
 		<![CDATA[
+			import mx.events.FlexEvent;
 			import mx.events.ListEvent;
 			
 			import net.vdombox.ide.modules.wysiwyg.events.ObjectsTreePanelEvent;
@@ -26,6 +27,7 @@
 
 			public function set pages( value : XMLList ) : void
 			{
+				trace("set pages");
 				_pages = value;
 			}
 
@@ -97,6 +99,7 @@
 
 			public function set selectedPageID( value : String ) : void
 			{
+				trace("selectedPageID");
 				var currentID : String;
 
 				if ( !_pages )
@@ -141,7 +144,7 @@
 				{
 					openTree( elementForSelection );
 					objectsTree.selectedItem = elementForSelection;
-					objectsTree.scrollToIndex( objectsTree.selectedIndex );
+//					objectsTree.scrollToIndex( objectsTree.selectedIndex );
 				}
 
 			}
@@ -160,6 +163,8 @@
 
 			private function creationCompleteHandler() : void
 			{
+				trace("\ncreationCompleteHandler + 1");
+				addEventListener( FlexEvent.SHOW, showHandler );
 				addEventListener( Event.REMOVED_FROM_STAGE, removedFromStageHandler, false, 0, true );
 
 				objectsTree.addEventListener( ListEvent.CHANGE, objectsTree_changeHandler, false, 0, true );
@@ -169,6 +174,11 @@
 
 				objectsTree.addEventListener( MouseEvent.MIDDLE_MOUSE_UP, objectsTree_mouseHandler, false, 0, true );
 				objectsTree.addEventListener( MouseEvent.MIDDLE_MOUSE_DOWN, objectsTree_mouseHandler, false, 0, true );
+			}
+			
+			private function showHandler( event : FlexEvent ):void
+			{
+				trace("\nshowHandler + 1");
 			}
 
 			private function removedFromStageHandler( event : Event ) : void
