added multiline in attribute
git-svn-id: http://svn.vdombox.ru/flextools/trunk@6752 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeMultilineItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeMultilineItemRenderer.mxml
@@ -5,7 +5,8 @@
 				
 				minHeight="23" width="100%"
 				creationComplete="creationCompleteHandler()"
-				xmlns:multiline="net.vdombox.ide.modules.wysiwyg.view.components.multiline.*" xmlns:attributeRenderers="net.vdombox.ide.modules.wysiwyg.view.components.attributeRenderers.*">
+				xmlns:multiline="net.vdombox.ide.modules.wysiwyg.view.components.multiline.*" 
+				xmlns:attributeRenderers="net.vdombox.ide.modules.wysiwyg.view.components.attributeRenderers.*">
 
 	<fx:Script>
 		<![CDATA[
