load content on editor
git-svn-id: http://svn.vdombox.ru/flextools/trunk@6759 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/VdomObjectEditor.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/VdomObjectEditor.mxml
@@ -48,10 +48,14 @@
 			private var isVdomObjectVOChanged : Boolean;
 			private var isStatusChanged : Boolean;
 
+			
 			public function get editorVO() : EditorVO
 			{
+//				trace("...editorVO()");
 				if ( !_editorVO )
+				{
 					_editorVO = createEditorVO();
+				}
 
 				return _editorVO;
 			}
@@ -64,6 +68,7 @@
 
 			public function set selectedRenderer( value : IRenderer ) : void
 			{
+//				trace("...selectedRenderer");
 				_selectedRenderer = value;
 			}
 
@@ -82,6 +87,7 @@
 
 			override protected function commitProperties() : void
 			{
+//				trace("...commitProperties()");
 				super.commitProperties();
 
 				if ( isStatusChanged )
@@ -102,6 +108,7 @@
 
 			override protected function partAdded( partName : String, instance : Object ) : void
 			{
+//				trace("...partAdded()");
 				super.partAdded( partName, instance );
 
 				if ( instance == saveXMLButton )
@@ -117,6 +124,7 @@
 
 			private function addHandlers() : void
 			{
+//				trace("...addHandlers()");
 				addEventListener( Event.REMOVED_FROM_STAGE, removedFromStageHandler, false, 0, true );
 
 				addEventListener( RendererEvent.MOVE, renderer_movedHandler, true, 0, true );
@@ -125,6 +133,7 @@
 
 			private function removeHandlers() : void
 			{
+//				trace("...removeHandlers()");
 				removeEventListener( Event.REMOVED_FROM_STAGE, removedFromStageHandler );
 
 				if ( skin )
@@ -133,16 +142,18 @@
 
 			private function refreshToolbar() : void
 			{
+//				trace("...refreshToolbar)(");
 			}
 
 			private function createEditorVO() : EditorVO
 			{
+//				trace("...createEditorVO()");
 				var newEditorVO : EditorVO;
 
 				newEditorVO = new EditorVO();
 
 				BindingUtils.bindSetter( vdomObjectChanged, newEditorVO, "vdomObjectVO", true, true );
-				BindingUtils.bindSetter( renderVOChanged, newEditorVO, "renderVO", true, true );
+				BindingUtils.bindSetter( renderVOChanged, newEditorVO, "renderVO");
 				BindingUtils.bindSetter( xmlPresentationChanged, newEditorVO, "vdomObjectXMLPresentationVO", true, true );
 
 				return newEditorVO;
@@ -150,23 +161,26 @@
 
 			private function vdomObjectChanged( value : IVDOMObjectVO ) : void
 			{
+//				trace("...vdomObjectChanged()");
 				isVdomObjectVOChanged = true;
 				invalidateProperties();
 			}
 
 			private function renderVOChanged( value : RenderVO ) : void
 			{
+//				trace("...renderVOChanged() ++++++++++");
 				if ( renderer )
 					renderer.renderVO = value;
 			}
 
 			private function xmlPresentationChanged( value : VdomObjectXMLPresentationVO ) : void
 			{
-
+//				trace("..xmlPresentationChanged()");
 			}
 
 			private function dispatchStateEvent() : void
 			{
+//				trace("...dispatchStateEvent()");
 				currentState = skin.currentState;
 
 				if ( skin.currentState.substr( 0, 7 ) == "wysiwyg" )
@@ -177,18 +191,21 @@
 
 			private function preinitializeHandler() : void
 			{
+//				trace("...preinitializeHandler()");
 				addHandlers();
 				dispatchEvent( new EditorEvent( EditorEvent.PREINITIALIZED ) );
 			}
 
 			private function creationCompleteHandler( event : FlexEvent ) : void
 			{
+//				trace("...creationCompleteHandler()");
 				skin.addEventListener( StateChangeEvent.CURRENT_STATE_CHANGE, changeStateHandler, false, 0, true );
 				dispatchStateEvent();
 			}
 
 			private function removedFromStageHandler( event : Event ) : void
 			{
+//				trace("...removedFromStageHandler(e)");
 				dispatchEvent( new EditorEvent( EditorEvent.REMOVED ) );
 
 				removeHandlers();
@@ -196,11 +213,13 @@
 
 			private function changeStateHandler( event : StateChangeEvent ) : void
 			{
+//				trace("...changeStateHandler(e)");
 				dispatchStateEvent();
 			}
 
 			private function saveXMLButton_clickHandler( event : MouseEvent ) : void
 			{
+//				trace("...saveXMLButton_clickHandler()");
 //				if( xmlPresentation )
 //				{
 //					var ee : EditorEvent = new EditorEvent( EditorEvent.XML_SAVE );
@@ -210,6 +229,7 @@
 
 			private function renderer_movedHandler( event : RendererEvent ) : void
 			{
+//				trace("...renderer_movedHandler(e)");
 				var ee : EditorEvent = new EditorEvent( EditorEvent.RENDERER_TRANSFORMED );
 
 				ee.renderer = event.target as IRenderer;
@@ -220,6 +240,7 @@
 
 			private function transformMarker_tansformCompleteHandler( event : TransformMarkerEvent ) : void
 			{
+//				trace("...transformMarker_tansformCompleteHandler(e)");
 				var ee : EditorEvent = new EditorEvent( EditorEvent.RENDERER_TRANSFORMED );
 
 				ee.renderer = TransformMarker( event.target ).renderer;
@@ -244,7 +265,7 @@
 	</s:layout>
 
 	<s:Group height="100%" width="100%">
-		<components:PageRenderer id="renderer"
+		<components:PageRenderer id="renderer" 
 								 height="100%" width="100%"
 								 selectedRenderer="{ selectedRenderer }" includeIn="wysiwyg, wysiwygDisabled, normal, disabled"/>
 
